--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <artifactId>maven-plugin-api</artifactId>
             <version>3.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
     </dependencies>
 
 </project>
